# panel-highcharts

./: .gitignore  .pylintrc  DEVELOPER_GUIDE.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  VERSION  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  script.py  setup.py
.github/workflows/: tests.yaml
assets/data/: new-intraday.json
binder/: postBuild  requirements.txt
binder/jupyter-panel-highcharts-server/: jupyter_panel_highcharts_server.py  setup.py
docker/: Dockerfile.pip
examples/: AddSeriesDynamically.ipynb  HighChart.ipynb  HighGantt.ipynb  HighMap.ipynb  HighStock.ipynb  LinkedCharts.ipynb  MinimumExample.ipynb  Network.ipynb  PackedBubble.ipynb  Themes.ipynb  Untitled.ipynb  Variwide.ipynb
examples/gallery/: Themes.ipynb
examples/reference/: HighChart.ipynb  HighStock.ipynb
panel_highcharts/: .bokeh  __init__.py  charts.py  config.py  highchart.py  index.ts  package-lock.json  package.json
panel_highcharts/models/: highbase.py  highbase.ts  highchart.py  highchart.ts  highgantt.py  highgantt.ts  highmap.py  highstock.py  index.ts
src/panel_highcharts/: .bokeh  __init__.py  charts.py  config.py  package-lock.json  package.json
src/panel_highcharts/models/: highbase.py  highchart.py  highchart.ts  highmap.py  highmap.ts  highstock.py  highstock.ts
tasks/: __init__.py  test.py
tests/: example.html  test_add_series.py  test_config.py  test_highchart.py  test_highgantt.py  test_highmap.py  test_highstock.py  test_other.py
tests/models/: test_highchart.py  test_highgantt.py  test_highmap.py  test_highstock.py
